extends Node


#MUSIC
@onready var in_game_test_song 
@onready var c1ym2_song = $Music/Concept10YouthMix02
@onready var c1tm_song = $Music/Concept01TitleMix
@onready var exit_song = $Music/ExitSong

#SFX
@onready var select_1_sfx = $SFX/Select1
@onready var confirm_1_sfx = $SFX/Confirm1
@onready var cancel_1_sfx = $SFX/Cancel1
@onready var text_1_sfx = $SFX/Text1
@onready var menu_hover_sfx = $SFX/MenuHover
@onready var menu_select_sfx = $SFX/MenuSelect